# xiaoxueqi

./: .gitignore  API.md  CMakeLists.txt  INSTALL.md  Makefile  README.md  TODO.md  build.js  check_headers.sh  compile_fix.sh  index.html  install_deps.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: API_TESTING_IMPACT.md  COMPILATION_GUIDE.md  FRONTEND_USAGE_GUIDE.md  INSTALL.md
include/: ApiHandler.h  Appointment.h  BusinessLogic.h  Case.h  DatabaseConnection.h  DatabaseService.h  Doctor.h  HospitalService.h  Hospitalization.h  Medication.h  Patient.h  Prescription.h  User.h
qt/include/: DatabaseManager.h  HospitalBusinessLogic.h
qt/src/: DatabaseManager.cpp
src/: ApiHandler.cpp  App.tsx  Appointment.cpp  Case.cpp  DatabaseConnection.cpp  DatabaseService.cpp  Doctor.cpp  HospitalService.cpp  Hospitalization.cpp  JsonAPI.cpp  Medication.cpp  Patient.cpp  Prescription.cpp  User.cpp  index.css  main.cpp
src/components/: Header.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx
src/contexts/: AuthContext.tsx  SupabaseContext.tsx
src/pages/: AppointmentsPage.tsx  CasesPage.tsx  DashboardPage.tsx  DoctorsPage.tsx  HospitalizationPage.tsx  LoginPage.tsx  PatientsPage.tsx  PrescriptionsPage.tsx
src/types/: database.ts
supabase/migrations/: 20250828072554_empty_villa.sql  20250828072735_noisy_snow.sql  20250828072811_withered_delta.sql  20250828072923_billowing_base.sql  20250828172315_rustic_shadow.sql  20250828173422_empty_pebble.sql  20250828173531_white_term.sql  20250828174916_rough_limit.sql  20250828175255_flat_art.sql  20250828175619_tiny_moon.sql  20250828182434_crystal_glade.sql  20250828182440_rustic_valley.sql  20250828182445_plain_sunset.sql  20250828182449_bronze_crystal.sql  20250828182452_throbbing_brook.sql  20250828182458_shy_base.sql  20250828182800_sunny_island.sql  20250828191418_super_art.sql  20250828191834_green_dune.sql
test/: README.md  api_test.cpp  run_all_tests.sh  run_single_test.sh  test_hospital.cpp
test/doctor/: doctor_appointment_list_no_date.json  doctor_appointment_list_success.json  doctor_attendance_cancel_check_in_success.json  doctor_attendance_check_in_success.json  doctor_attendance_get_history_no_date_range.json  doctor_attendance_get_history_success.json  doctor_auth_login_missing_employee_id.json  doctor_auth_login_success.json  doctor_auth_login_wrong_password.json  doctor_auth_reset_password_success.json  doctor_auth_reset_password_wrong_id_card.json  doctor_lab_result_upload_invalid_base64.json  doctor_lab_result_upload_success.json  doctor_leave_request_cancel_not_found.json  doctor_leave_request_cancel_success.json  doctor_leave_request_list_success.json  doctor_leave_request_submit_invalid_date_range.json  doctor_leave_request_submit_invalid_type.json  doctor_leave_request_submit_success.json  doctor_medical_record_create_empty_diagnosis.json  doctor_medical_record_create_success.json  doctor_patient_get_medical_records_invalid_patient.json  doctor_patient_get_medical_records_success.json  doctor_prescription_create_empty_medicines.json  doctor_prescription_create_success.json  doctor_profile_get_success.json  doctor_profile_update_success.json  doctor_status_update_invalid_status.json  doctor_status_update_offline.json  doctor_status_update_online.json
test/patient/: patient_appointment_create_missing_schedule.json  patient_appointment_create_success.json  patient_assessment_get_link_success.json  patient_auth_login_missing_account.json  patient_auth_login_success.json  patient_auth_login_wrong_password.json  patient_auth_register_invalid_email.json  patient_auth_register_missing_email.json  patient_auth_register_success.json  patient_auth_register_weak_password.json  patient_auth_reset_password_invalid_code.json  patient_auth_reset_password_success.json  patient_chat_get_history_no_pagination.json  patient_chat_get_history_success.json  patient_chat_send_message_empty_content.json  patient_chat_send_message_success.json  patient_consultation_request_online_success.json  patient_lab_result_list_success.json  patient_medical_record_list_success.json  patient_prescription_get_not_found.json  patient_prescription_get_success.json  patient_prescription_list_success.json  patient_profile_get_invalid_token.json  patient_profile_get_success.json  patient_profile_update_invalid_phone.json  patient_profile_update_success.json
test/public/: public_doctor_get_invalid_id.json  public_doctor_get_missing_id.json  public_doctor_get_valid_id.json  public_schedule_list_by_date.json  public_schedule_list_by_department.json  public_schedule_list_no_filters.json  public_schedule_list_with_filters.json
test/results/doctor/: doctor_auth_login_success.json
test/results/patient/: patient_appointment_create_success.json  patient_auth_login_success.json  patient_auth_register_success.json  patient_auth_register_success.json.json  patient_auth_reset_password_success.json  patient_profile_get_success.json  patient_profile_update_success.json
test/results/public/: public_doctor_get_valid_id.json  public_schedule_list_no_filters.json
